--- a/index.html
+++ b/index.html
@@ -2534,6 +2534,7 @@
                                             <!--/$-->
                                         </div>
                                         <div class="framer-1lugckr" style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;--framer-link-text-color:rgb(0, 153, 255);--framer-link-text-decoration:underline;transform:none" data-framer-component-type="RichTextContainer">
+                                            <p style="--font-selector:R0Y7VGVub3IgU2Fucy1yZWd1bGFy;--framer-font-family:&quot;Tenor Sans&quot;, &quot;Tenor Sans Placeholder&quot;, sans-serif;--framer-font-size:24px;--framer-letter-spacing:-1.6px;--framer-line-height:1em" class="framer-text">AX | Сайты &amp;Маркетинг</p>
                                         </div>
                                         <div class="framer-d3079c-container">
                                             <!--$-->
