--- a/index.html
+++ b/index.html
@@ -4498,7 +4498,7 @@
                             <div class="framer-5dxtb7-container">
                                 <!--$-->
                                 <a class="framer-MBC4e framer-wxtuy5 framer-v-1prq4ej framer-1080swd" data-framer-name="Variant 2" href="https://t.me/AX_sites/78" target="_blank" rel="noopener">
-                                    <div class="framer-yc195b" style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;--extracted-r6o4lv:rgb(133, 133, 133);transform:none" data-framer-component-type="RichTextContainer">
+                                    <div class="framer-yc195b" style="outline:none;display:none;flex-direction:column;justify-content:flex-start;flex-shrink:0;--extracted-r6o4lv:rgb(133, 133, 133);transform:none" data-framer-component-type="RichTextContainer">
                                         <p style="--font-selector:Q1VTVE9NO0ludGVyIFRpZ2h0IE1lZGl1bQ==;--framer-font-family:&quot;Inter Tight Medium&quot;, &quot;Inter Tight Medium Placeholder&quot;, sans-serif;--framer-text-color:var(--extracted-r6o4lv, rgb(133, 133, 133))" class="framer-text">Telegram-канал</p>
                                     </div>
                                 </a>
